Tweak annotation processor readme guide